--- a/generic_dnn/local.yaml
+++ b/generic_dnn/local.yaml
@@ -5,27 +5,30 @@ GENERAL:
     # Applications:
     #               99 - Spam mail filter
     #               0  - Forex tick sampler
-    #               1  - Forex multifilters
-    APPLICATION: 1
+    #               1  - Forex trainer
+    #               2  - Generic app
+    APPLICATION: 2
 
     # Log levels: 0 - LOG_FATAL
     #             1 - LOG_ERROR
-    #              2 - LOG_INFO
-    #              3 - LOG_DEBUG
+    #             2 - LOG_INFO
+    #             3 - LOG_DEBUG
     LOG_LEVEL: 2
 
     # Format of gauge file
     GAUGE_FILE_FORMAT: csv
 
-
     # Model selector, crossval idation is default
     ENABLE_MODEL_SELECTOR: true
 
     # Maximum allowed number of to-be-trained models
-    MAX_NUM_MODELS: 2
+    MAX_NUM_MODELS: 3
 
     # Minimum number of product models
-    MIN_NUM_MODELS: 1
+    MIN_NUM_MODELS: 2
+
+    SAVE_MODEL_FILE: ""
+    LOAD_MODEL_FILE: ""
 
 # Machine-learning engine
 
@@ -35,7 +38,7 @@ ML_ENGINE_CORE:
     # 1 - decision tree (DCT)
     # 2 - random forest
     # 3 - DNN
-    ENGINE_CORE_TYPE: 0
+    ENGINE_CORE_TYPE: 3
     SVM:
         # rbf, linear, poly, sigmoid, precomputed
         KERNEL: rbf
@@ -54,15 +57,17 @@ ML_ENGINE_CORE:
         N_ESTIMATORS: 10
         CRITERION: entropy
     DNN:
-        EPOCHS: 1000
-        NEURONS: :[10,20,10]
-        ACTIVATION: ['relu','relu','relu']
-        DROPOUT_RATE: [0.2,0.2,0.2]
-        BATCH_SIZE: 100
-        ALGORITHM: SGD
-        WEIGHT_INIT: uniform
+        EPOCHS: 100
+        BATCH_SIZE: 5
+        NEURONS: [60,30]
+        ACTIVATION: ['relu','relu']
+        DROPOUT_RATE: [0.0,0.0]
+        REGULARIZER: ['L2:0.00','L2:0.00']
+        ALGORITHM: adam
+        WEIGHT_INIT: normal
         LEARN_RATE: 0.01
-        MOMENTUM: 0.1 #ONLY USED WHEN ALGORITHM == SGD
+        MOMENTUM: 0.8 #ONLY USED WHEN ALGORITHM == SGD
+        VERBOSE: 0
 
 FEATURE_EXTRACTOR:
     # Type of feature extractor:
@@ -76,20 +81,21 @@ MODEL_SELECTOR:
     N_JOBS: 8
 ########################### Classifiers ###########################
     MODEL_1:
-        #ENABLED: true
+        ENABLED: false
         MODEL_NAME: SVM
-        KERNEL_LIST: [rbf]
+        KERNEL_LIST: [rbf,sigmoid]
     MODEL_2:
-        #ENABLED: true
+        ENABLED: false
         MODEL_NAME: DCT # Decision tree
         SAMPLE_SPLIT: 4,200,100 # min,max,num
     MODEL_3:
-        ENABLED: true
+        ENABLED: false
         MODEL_NAME: RMF # Random forest
-        N_ESTIMATORS: 10,200,10  # min,max,num
+        N_ESTIMATORS: 10,200,10 # min,max,num
         CRITERION: [gini,entropy]
         MIN_SAMPLES_SPLIT: 2,40,10
-    MODEL_4:
+
+    MODEL_4: #  not enabled
         ENABLED: false
         MODEL_NAME: DNN
         
@@ -105,13 +111,11 @@ MODEL_SELECTOR:
         MOMENTUM: 0.,0.9,10 #ONLY USED WHEN ALGORITHM == SGD
         
 ########################### App config starts here ###########################
-FXT: # Forex trainer
-   FEATURE_EXTRACTOR:
-       TICK_FILE: EURUSD_sell.csv
-       #TICK_FILE: EURUSD_buy.csv
-       TEST_SIZE: 500
-       SAMPLE_RATE: 30 # sec
-
-       #FEATURE_LIST: ['DMA','RSI','MACD']
-       FAST_PERIOD: 400
-       SLOW_PERIOD: 150
+GENERIC_APP:
+    ENGINE_TYPE: 0  # 0 - Classifier. 1 - Regressor (not supported)
+    EVALUATE_MODEL: true
+    #DATA_FILE: pima-indians-diabetes.data.csv
+    DATA_FILE: sonar.csv
+    TEST_SIZE: 0
+    TARGET_HEADER: ""
+    FEATURE_HEADERS: []
